# Mandelbrot-set

./: .env.cmake  CMakeLists.txt  README.md  index.html  script.js  style.css
src/: Gui.hpp  colormap.hpp  defines.hpp  main.cpp  mandelbrot.frag
